--- a/ServiPrueba/appsettings.json
+++ b/ServiPrueba/appsettings.json
@@ -16,7 +16,7 @@
     "HostName": "localhost",
     "QueueName": "logs_queue",
     "UserName": "serviall_manager",
-    "Password": "luna2012",
+    "Password": "********",
     "Port": 5672
   }
 }
